# calixto-ros-bot

./: CMakeLists.txt  calixto-ros-bot.xml  package.xml  test_commands.txt
config/: bridge_config.yaml  diffbot_controllers.yaml
description/: diffbot.ros2_control.xacro  gazebo_control.xacro  robot.urdf.xacro  robot_core.xacro
description/install/: local_setup.sh  setup.bash  setup.sh
description/log/: latest_build
description/meshes/: ROS2-Chasis-battery-holder-yellow.stl  ROS2-Chasis-comp-holder-darkblue.stl  ROS2-Chasis-led-holder-black.stl  ROS2-Chasis-motors-grey.stl  ROS2-Chasis-stem-blue.stl  ROS2-Chasis-switch-holder.stl  ROS2-Chasis-top-and-bottom-red.stl  ROS2-Chasis.stl  ROS2-Chasis_new.stl  ROS2-Chassis-URDF.stl
description/rviz/: diffbot.rviz
hardware/: diffbot_system.cpp
hardware/include/calixto-ros-bot/: diffbot_system.hpp  mcu_comms.hpp  wheel.hpp
hooks/: resource_paths.dsv.in
install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
install/calixto-ros-bot/share/calixto-ros-bot/: calixto-ros-bot.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/calixto-ros-bot/share/calixto-ros-bot/cmake/: calixto-ros-botConfig-version.cmake  calixto-ros-botConfig.cmake
install/calixto-ros-bot/share/calixto-ros-bot/config/: bridge_config.yaml  diffbot_controllers.yaml  empty.yaml
install/calixto-ros-bot/share/calixto-ros-bot/description/: robot.urdf.xacro  (+4 more)
launch/: diffbot.launch.py  launch_sim.launch.py  rsp.launch.py
log/: latest_build
(+33 files in other folders)
